Fixed body alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@
   }
 
   body {
-    @apply m-0 flex min-w-[320px] min-h-screen items-center justify-center text-white/90 antialiased;
+    @apply m-0 flex min-w-[320px] min-h-screen text-white/90 antialiased overflow-y-scroll;
     font-family: "Space Grotesk", "Segoe UI", sans-serif;
     background-color: var(--bg);
     background-image:
